fix dark mode

--- a/app/components/Benefits/Benefits.module.css
+++ b/app/components/Benefits/Benefits.module.css
@@ -30,8 +30,11 @@
 .benefits-item {
     list-style: none;
     font-size: .8rem;
-    color: rgb(54, 54, 54);
 
+}
+
+.item-content{
+    opacity: 0.7;
 }
 
 .item-title {
