--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: rgb(245, 245, 245);
 }
 
 .content{
